# weir-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  symfynity-agent.example.env  weir-agent.example.env
docs/superpowers/plans/: 2026-07-13-symfynity-agent.md  2026-07-13-weir-agent.md
src/: backend.rs  config.rs  forwarder.rs  lib.rs  main.rs  state.rs  symfynity.rs  weir.rs
tests/: forwarder_test.rs
