[package]
name = "weir-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "weir-agent"
path = "src/main.rs"

[lib]
name = "weir_agent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
