[package]
name = "symfynity-agent"
version = "0.3.0"
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "symfynity-agent"
path = "src/main.rs"

[lib]
name = "symfynity_agent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
